--- a/blaze-server-0.20-2.12/build.gradle
+++ b/blaze-server-0.20-2.12/build.gradle
@@ -15,10 +15,10 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.instrumentation.blaze-server-0.20-2.12'
-    attributes 'Implementation-Vendor': 'New Relic'
-    attributes 'Implementation-Vendor-Id': 'com.newrelic'
-    attributes 'Implementation-Version': 1.0
+    attributes 'Implementation-Title': 'com.newrelic.labs.instrumentation.blaze-server-0.20-2.12'
+    attributes 'Implementation-Vendor': 'New Relic Labs'
+    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
+    attributes 'Implementation-Version': 1.1
   }
 }
 
