--- a/http4s-dsl-0.21-2.13/build.gradle
+++ b/http4s-dsl-0.21-2.13/build.gradle
@@ -14,10 +14,10 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.instrumentation.http4s-dsl-0.21-2.13'
-    attributes 'Implementation-Vendor': 'New Relic'
-    attributes 'Implementation-Vendor-Id': 'com.newrelic'
-    attributes 'Implementation-Version': 1.0
+    attributes 'Implementation-Title': 'com.newrelic.labs.instrumentation.http4s-dsl-0.21-2.13'
+    attributes 'Implementation-Vendor': 'New Relic Labs'
+    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
+    attributes 'Implementation-Version': 1.1
   }
 }
 
