--- a/blaze-server-0.20-2.12/build.gradle
+++ b/blaze-server-0.20-2.12/build.gradle
@@ -7,7 +7,7 @@ dependencies {
    implementation 'org.http4s:http4s-blaze-server_2.12:0.20.0'
     implementation("org.scala-lang:scala-library:2.12.7")
     
-   // New Relic Java Agent dependencies
+   // New Relic Labs Java Agent dependencies
    implementation 'com.newrelic.agent.java:newrelic-agent:6.0.0'
    implementation 'com.newrelic.agent.java:newrelic-api:6.0.0'
    implementation fileTree(include: ['*.jar'], dir: '../libs')
@@ -15,9 +15,9 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.labs.instrumentation.blaze-server-0.20-2.12'
-    attributes 'Implementation-Vendor': 'New Relic Labs'
-    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
+    attributes 'Implementation-Title': 'com.newrelic.labs.labs.instrumentation.blaze-server-0.20-2.12'
+    attributes 'Implementation-Vendor': 'New Relic Labs Labs'
+    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs.labs'
     attributes 'Implementation-Version': 1.1
   }
 }
