--- a/http4s-client-0.20-2.12/build.gradle
+++ b/http4s-client-0.20-2.12/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'scala'
 dependencies {
    implementation 'org.http4s:http4s-client_2.12:0.20.0'
 
-   // New Relic Java Agent dependencies
+   // New Relic Labs Java Agent dependencies
    implementation 'com.newrelic.agent.java:newrelic-agent:6.0.0'
    implementation 'com.newrelic.agent.java:newrelic-api:6.0.0'
    implementation fileTree(include: ['*.jar'], dir: '../libs')
@@ -14,9 +14,9 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.labs.instrumentation.http4s-client-0.20-2.12'
-    attributes 'Implementation-Vendor': 'New Relic Labs'
-    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
+    attributes 'Implementation-Title': 'com.newrelic.labs.labs.instrumentation.http4s-client-0.20-2.12'
+    attributes 'Implementation-Vendor': 'New Relic Labs Labs'
+    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs.labs'
     attributes 'Implementation-Version': 1.1
   }
 }
