--- a/blaze-server-0.18-2.12/build.gradle
+++ b/blaze-server-0.18-2.12/build.gradle
@@ -17,8 +17,8 @@ dependencies {
 jar {
   manifest {
     attributes 'Implementation-Title': 'com.newrelic.labslabs.instrumentation.blaze-server-0.18-2.12'
-    attributes 'Implementation-Vendor': 'New Relic Labs Labs'
-    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs.labs'
+    attributes 'Implementation-Vendor': 'New Relic Labs'
+    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
     attributes 'Implementation-Version': 1.1
   }
 }
