--- a/http4s-dsl-0.21-2.12/build.gradle
+++ b/http4s-dsl-0.21-2.12/build.gradle
@@ -14,9 +14,9 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.labs.labs.instrumentation.http4s-dsl-0.21-2.12'
-    attributes 'Implementation-Vendor': 'New Relic Labs Labs'
-    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs.labs'
+    attributes 'Implementation-Title': 'com.newrelic.labs.instrumentation.http4s-dsl-0.21-2.12'
+    attributes 'Implementation-Vendor': 'New Relic Labs'
+    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
     attributes 'Implementation-Version': 1.1
   }
 }
