--- a/blaze-server-0.18-2.12/build.gradle
+++ b/blaze-server-0.18-2.12/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.labslabs.instrumentation.blaze-server-0.18-2.12'
+    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.blaze-server-0.18-2.12'
     attributes 'Implementation-Vendor': 'New Relic Labs'
     attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
     attributes 'Implementation-Version': 1.1
