--- a/blaze-server-0.21-2.13/build.gradle
+++ b/blaze-server-0.21-2.13/build.gradle
@@ -14,7 +14,7 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.labs.instrumentation.blaze-server-0.21-2.13'
+    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.blaze-server-0.21-2.13'
     attributes 'Implementation-Vendor': 'New Relic Labs'
     attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
     attributes 'Implementation-Version': 1.1
